[package]
name = "sklearn-rust-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sklearn_rust_engine"
crate-type = ["cdylib"]

[dependencies]
# pyo3 = "0.21.1"
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py37"] }
numpy = "0.21.0"
ndarray = "0.16.1"
